main/default/objects/System_Log__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <description>Specific application against which the System Log is generated.</description>
    <inlineHelpText>Specific application against which the System Log is generated.</inlineHelpText>
    <label>Application</label>
    <length>255</length>
    <type>Text</type>
</CustomField>