main/default/objects/System_Log__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Messaage details for the System Log.</description>
    <inlineHelpText>Messaage details for the System Log.</inlineHelpText>
    <label>Message</label>
    <length>16384</length>
    <type>LongTextArea</type>
</CustomField>