main/default/objects/System_Log__c/fields/Record__c.field-meta.xml
<CustomField>
    <fullName>Record__c</fullName>
    <description>ABility to open Salesforce record from User Interface.</description>
    <formula>IF(
        NOT(ISBLANK(Record_Id__c)),
        HYPERLINK(&quot;/&quot; &amp;  Record_Id__c, &quot;Open Related Record&quot;),
        &quot;&quot;
    )</formula>
    <inlineHelpText>Click on the generated link to open record.</inlineHelpText>
    <label>Related Record</label>
    <type>Text</type>
</CustomField>